--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/ActivoFijo/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/ActivoFijo/Anular.cshtml
@@ -141,6 +141,12 @@
             <li>
                 <a href="#tab_caracteristicas" aria-controls="caracteristicas" role="tab" data-toggle="tab">Características del activo</a>
             </li>
+            <li>
+                <a href="#tab_detalle" aria-controls="detalle" role="tab" data-toggle="tab">Distribución de depreciación</a>
+            </li>
+            <li>
+                <a href="#tab_encargado" aria-controls="encargado" role="tab" data-toggle="tab">Encargado</a>
+            </li>
         </ul>
         <div class="tab-content" style="padding-top: 20px">
             <div role="tabpanel" class="tab-pane active" style="margin-left: 1em;" id="tab_configuracion">
@@ -319,6 +325,60 @@
 
             </div>
 
+
+            <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_detalle">
+
+
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="col-md-12">
+                            <div class="form-group">
+                                @Html.Action("GridViewPartial_activo_fijo_ctacble")
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+
+
+
+            </div>
+
+            <div role="tabpanel" class="tab-pane" style="margin-left: 1em;" id="tab_encargado">
+
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="col-md-12">
+                            <div class="form-group">
+                                <label for="IdEmpleadoCustodio">Empleado custodio*</label>
+                                @Html.Partial("_CmbEmpleado_Cus_AF", Model.IdEmpleadoCustodio)
+                                @Html.ValidationMessageFor(q => q.IdEmpleadoCustodio, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="col-md-12">
+                            <div class="form-group">
+                                <label for="IdEmpleadoEncargado">Empleado encargado*</label>
+                                @Html.Partial("_CmbEmpleado_Enc_AF", Model.IdEmpleadoEncargado)
+                                @Html.ValidationMessageFor(q => q.IdEmpleadoEncargado, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
+
+
+
+            </div>
         </div>
     </div>
     <div class="box-footer">
