--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ArchivosTransferencias/_GridViewPartial_archivo_transferencia.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ArchivosTransferencias/_GridViewPartial_archivo_transferencia.cshtml
@@ -126,6 +126,16 @@
             });
             column.Width = Unit.Percentage(5);
         });
+        settings.Columns.Add(column =>
+        {
+            column.SetDataItemTemplateContent(c =>
+            {
+                ViewContext.Writer.Write("<span class=\"glyphicon  glyphicon-print\" onclick=\"OpenInNewTabWinBrowser('" + Url.Action("ROL_020", "RRHHReportes", new { Area = "Reportes", IdEmpresa = DataBinder.Eval(c.DataItem, "IdEmpresa").ToString(), IdNominaTipo = DataBinder.Eval(c.DataItem, "IdNominaTipo").ToString(), IdNomina = DataBinder.Eval(c.DataItem, "IdNomina").ToString(), IdPeriodo = DataBinder.Eval(c.DataItem, "IdPeriodo").ToString() }, Request.Url.Scheme) + "');\"></span>");
+
+            });
+            column.Width = Unit.Percentage(5);
+        });
+
     });
 }
 @grid.Bind(Model).GetHtml()
