--- a/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/TipoAF/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/ActivoFijo/Views/TipoAF/Modificar.cshtml
@@ -71,7 +71,14 @@
     </div>
 
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-6">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label for="IdCtaCble_Activo">Cuenta contable activo</label>
+                    @Html.Partial("_CmbCuenta_TipoAF1", Model)
+                    @Html.ValidationMessageFor(q => q.IdCtaCble_Activo, "", new { @class = "text-danger" })
+                </div>
+            </div>
             <div class="col-md-12">
                 <div class="form-group">
                     <label for="IdCtaCble_Dep_Acum">Cuenta contable depreciación acumulada</label>
@@ -79,11 +86,7 @@
                     @Html.ValidationMessageFor(q => q.IdCtaCble_Dep_Acum, "", new { @class = "text-danger" })
                 </div>
             </div>
-        </div>
-    </div>
 
-    <div class="row">
-        <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
                     <label for="IdCtaCble_Gastos_Depre">Cuenta contable gastos de depreciación</label>
@@ -92,9 +95,7 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-6">
             <div class="col-md-12">
                 <div class="form-group">
                     <label for="IdCtaCble_CostoVenta">Cuenta contable costo de venta</label>
@@ -102,9 +103,7 @@
                     @Html.ValidationMessageFor(q => q.IdCtaCble_CostoVenta, "", new { @class = "text-danger" })
                 </div>
             </div>
-        </div>
-    </div>    <div class="row">
-        <div class="col-md-12">
+
             <div class="col-md-12">
                 <div class="form-group">
                     <label for="IdCtaCble_Mejora">Cuenta contable mejora</label>
@@ -112,9 +111,6 @@
                     @Html.ValidationMessageFor(q => q.IdCtaCble_Mejora, "", new { @class = "text-danger" })
                 </div>
             </div>
-        </div>
-    </div>    <div class="row">
-        <div class="col-md-12">
             <div class="col-md-12">
                 <div class="form-group">
                     <label for="IdCtaCble_Baja">Cuenta contable baja</label>
@@ -122,9 +118,7 @@
                     @Html.ValidationMessageFor(q => q.IdCtaCble_Baja, "", new { @class = "text-danger" })
                 </div>
             </div>
-        </div>
-    </div>    <div class="row">
-        <div class="col-md-12">
+
             <div class="col-md-12">
                 <div class="form-group">
                     <label for="IdCtaCble_Retiro">Cuenta contable retiro</label>
@@ -133,7 +127,9 @@
                 </div>
             </div>
         </div>
+
     </div>
+
 
 
     <div class="box-footer">
