--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/Nuevo.cshtml
@@ -494,9 +494,23 @@
 
                     <div class="col-md-2">
                         <div class="form-group">
-                            <label for="Valor_horas">Valor de horas</label>
-                            @Html.TextBoxFor(q => q.Valor_horas, new { @class = "form-control" })
-                            @Html.ValidationMessageFor(q => q.Valor_horas, "", new { @class = "text-danger" })
+                            <label for="Valor_horas">Valor hora vespertina</label>
+                            @Html.TextBoxFor(q => q.Valor_horas_vespertina, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(q => q.Valor_horas_vespertina, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="form-group">
+                            <label for="Valor_horas">Valor hora matutina</label>
+                            @Html.TextBoxFor(q => q.Valor_horas_matutino, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(q => q.Valor_horas_matutino, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <div class="form-group">
+                            <label for="Valor_horas">Valor hora nocturnas</label>
+                            @Html.TextBoxFor(q => q.Valor_horas_nocturna, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(q => q.Valor_horas_nocturna, "", new { @class = "text-danger" })
                         </div>
                     </div>
 
