--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/RubrosCalculados/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/RubrosCalculados/Index.cshtml
@@ -415,7 +415,7 @@
                     <label for="IdRubro_prov_vac">Rubro horas matutina*</label>
                     @Html.DevExpress().ComboBoxFor(q => q.IdRubro_horas_matutina, settings =>
                {
-                   settings.Name = "IdRubro_FR";
+                   settings.Name = "IdRubro_horas_matutina";
                    settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
                    settings.Properties.DisplayFormatString = "[{0}] - {1}";
                    settings.Properties.Columns.Add("ru_codRolGen", "Código").Width = System.Web.UI.WebControls.Unit.Percentage(10);
@@ -441,7 +441,7 @@
                     <label for="IdRubro_prov_vac">Rubro horas vesértina*</label>
                     @Html.DevExpress().ComboBoxFor(q => q.IdRubro_horas_vespertina, settings =>
                {
-                   settings.Name = "IdRubro_FR";
+                   settings.Name = "IdRubro_horas_vespertina";
                    settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
                    settings.Properties.DisplayFormatString = "[{0}] - {1}";
                    settings.Properties.Columns.Add("ru_codRolGen", "Código").Width = System.Web.UI.WebControls.Unit.Percentage(10);
@@ -467,7 +467,7 @@
                     <label for="IdRubro_prov_vac">Rubro horas nocturna*</label>
                     @Html.DevExpress().ComboBoxFor(q => q.IdRubro_horas_nocturna, settings =>
                {
-                   settings.Name = "IdRubro_FR";
+                   settings.Name = "IdRubro_horas_nocturna";
                    settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
                    settings.Properties.DisplayFormatString = "[{0}] - {1}";
                    settings.Properties.Columns.Add("ru_codRolGen", "Código").Width = System.Web.UI.WebControls.Unit.Percentage(10);
