--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/_GridViewPartial_empleados.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Empleado/_GridViewPartial_empleados.cshtml
@@ -7,6 +7,9 @@
         settings.Width = Unit.Percentage(100);
         settings.KeyFieldName = "IdEmpleado";
 
+        //Configuración para que la grilla no muestre texto completo
+        settings.SettingsBehavior.AllowEllipsisInText = true;
+        settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.NextColumn;
         //Configuracion responsive
         settings.SettingsAdaptivity.AdaptivityMode = GridViewAdaptivityMode.HideDataCellsWindowLimit;
         settings.SettingsAdaptivity.AdaptiveColumnPosition = GridViewAdaptiveColumnPosition.Right;
@@ -76,20 +79,18 @@
             });
             c.Settings.AllowDragDrop = DefaultBoolean.False;
             c.Settings.AllowSort = DefaultBoolean.False;
-            c.Width = Unit.Pixel(65);
+            c.Width = Unit.Pixel(150);
         });
-
-
-
-        settings.Columns.Add("IdEmpleado","ID").Width=Unit.Percentage(3);
-        settings.Columns.Add("em_codigo","Código").Width=Unit.Percentage(5);
-        settings.Columns.Add("pe_cedulaRuc", "Cédula").Width = Unit.Percentage(5);
-        settings.Columns.Add("Empleado","Nombres").Width=Unit.Percentage(15);
+        
+        settings.Columns.Add("IdEmpleado","ID").Width=Unit.Percentage(10);
+        settings.Columns.Add("em_codigo","Código").Width=Unit.Percentage(10);
+        settings.Columns.Add("pe_cedulaRuc", "Cédula").Width = Unit.Percentage(10);
+        settings.Columns.Add("Empleado","Nombres").Width=Unit.Percentage(40);
         settings.Columns.Add(column =>
         {
             column.FieldName = "EstadoBool";
             column.Caption = "Estado";
-            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
+            column.Width = System.Web.UI.WebControls.Unit.Percentage(10);
             column.EditorProperties().CheckBox(sp =>
             {
 
@@ -99,7 +100,7 @@
         {
             column.FieldName = "em_fechaIngaRol";
             column.Caption = "Ingreso";
-            column.Width = Unit.Percentage(8);
+            column.Width = Unit.Percentage(10);
             column.PropertiesEdit.DisplayFormatString = "d";
 
         });
@@ -109,7 +110,7 @@
             column.Caption = "Cargas";
             column.Name = "cargas";
             //  settings.FormatConditions.AddColorScale("cargas", GridConditionColorScaleFormat.BlueWhiteRed);
-            column.Width = Unit.Percentage(4);
+            column.Width = Unit.Percentage(10);
             column.SetDataItemTemplateContent(container =>
             {
                 Html.DevExpress().HyperLink(hyperlink =>
