--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ImportacionHoras/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ImportacionHoras/Nuevo.cshtml
@@ -26,29 +26,6 @@
 <div class="row">
     <div class="col-md-12">
 
-        <div class="col-md-4">
-            <div class="form-group">
-                <label for="IdCargo">Sucursal*</label>
-                @Html.DevExpress().ComboBoxFor(q => q.IdSucursal, settings =>
-               {
-                   settings.Name = "IdSucursal";
-                   settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                   settings.Properties.DisplayFormatString = "[{0}] - {1}";
-                   settings.Properties.Columns.Add("IdSucursal", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-                   settings.Properties.Columns.Add("Su_descripcion", "Sucursal").Width = System.Web.UI.WebControls.Unit.Percentage(50);
-                   //Campo ID
-                   settings.Properties.ValueField = "IdSucursal";
-                   settings.Properties.ValueType = typeof(int);
-                   settings.Properties.TextField = "Sucursal";
-                   //Boton para seleccionar ningun registro
-                   settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Never;
-                   settings.Properties.NullText = "== Seleccione ==";
-                   settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-
-               }).BindList(ViewBag.lst_sucursal).GetHtml()
-                @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
-            </div>
-        </div>
 
         <div class="col-md-4">
             <div class="form-group">
@@ -97,33 +74,32 @@
                 @Html.ValidationMessageFor(q => q.IdNominaTipo, "", new { @class = "text-danger" })
             </div>
         </div>
-    </div>
-    </div>
 
-    <div class="row">
-        <div class="col-md-12">
-            <div class="col-md-2">
-                <div class="form-group">
-                    <label for="Fecha">Fecha Novedad*</label>
-                    <div class="input-group date">
-                        <div class="input-group-addon">
-                            <i class="fa fa-calendar"></i>
-                        </div>
-                        @Html.DevExpress().DateEditFor(q=> q.FechaCarga, settings =>
-                    {
-                        settings.Name = "FechaCarga";
-                        settings.Properties.UseMaskBehavior = true;
-                        settings.Properties.EditFormat = EditFormat.Date;
-                        settings.Properties.EditFormatString = "dd/MM/yyyy";
-                        settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
-                        settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                    }).GetHtml()
-                        @Html.ValidationMessageFor(q => q.FechaCarga, "", new { @class = "text-danger" })
+
+        <div class="col-md-2">
+            <div class="form-group">
+                <label for="Fecha">Fecha pago*</label>
+                <div class="input-group date">
+                    <div class="input-group-addon">
+                        <i class="fa fa-calendar"></i>
                     </div>
+                    @Html.DevExpress().DateEditFor(q=> q.FechaCarga, settings =>
+                {
+                    settings.Name = "FechaCarga";
+                    settings.Properties.UseMaskBehavior = true;
+                    settings.Properties.EditFormat = EditFormat.Date;
+                    settings.Properties.EditFormatString = "dd/MM/yyyy";
+                    settings.Properties.TimeSectionProperties.TimeEditProperties.EditFormat = EditFormat.Date;
+                    settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                }).GetHtml()
+                    @Html.ValidationMessageFor(q => q.FechaCarga, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
     </div>
+    </div>
+
+   
 
     <div class="row">
         <div class="col-md-12">
