--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ImportacionHoras/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ImportacionHoras/Anular.cshtml
@@ -24,84 +24,61 @@
 
 
     <div class="row">
-        <div class="col-md-4">
-            <div class="form-group">
-                <label for="IdCargo">Sucursal*</label>
-                @Html.DevExpress().ComboBoxFor(q => q.IdSucursal, settings =>
-               {
-                   settings.Name = "IdSucursal";
-                   settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                   settings.Properties.DisplayFormatString = "[{0}] - {1}";
-                   settings.Properties.Columns.Add("IdSucursal", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-                   settings.Properties.Columns.Add("Su_descripcion", "Sucursal").Width = System.Web.UI.WebControls.Unit.Percentage(50);
-                   //Campo ID
-                   settings.Properties.ValueField = "IdSucursal";
-                   settings.Properties.ValueType = typeof(int);
-                   settings.Properties.TextField = "Sucursal";
-                   //Boton para seleccionar ningun registro
-                   settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Never;
-                   settings.Properties.NullText = "== Seleccione ==";
-                   settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-
-               }).BindList(ViewBag.lst_sucursal).GetHtml()
-                @Html.ValidationMessageFor(q => q.IdSucursal, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="col-md-4">
-            <div class="form-group">
-                <label for="IdCargo">Nómina*</label>
-                @Html.DevExpress().ComboBoxFor(q => q.IdNomina, settings =>
-               {
-                   settings.Name = "IdNomina";
-                   settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                   settings.Properties.DisplayFormatString = "[{0}] - {1}";
-                   settings.Properties.Columns.Add("IdNomina_Tipo", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-                   settings.Properties.Columns.Add("Descripcion", "Nómina").Width = System.Web.UI.WebControls.Unit.Percentage(50);
-                   //Campo ID
-                   settings.Properties.ValueField = "IdNomina_Tipo";
-                   settings.Properties.ValueType = typeof(int);
-                   settings.Properties.TextField = "Descripcion";
-                   //Boton para seleccionar ningun registro
-                   settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Never;
-                   settings.Properties.NullText = "== Seleccione ==";
-                   settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-
-               }).BindList(ViewBag.lst_nomina).GetHtml()
-                @Html.ValidationMessageFor(q => q.IdNomina, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="col-md-4">
-            <div class="form-group">
-                <label for="IdCargo">Proceso*</label>
-                @Html.DevExpress().ComboBoxFor(q => q.IdNominaTipo, settings =>
-               {
-                   settings.Name = "IdNominaTipo";
-                   settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                   settings.Properties.DisplayFormatString = "[{0}] - {1}";
-                   settings.Properties.Columns.Add("IdNomina_TipoLiqui", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-                   settings.Properties.Columns.Add("DescripcionProcesoNomina", "Proceso").Width = System.Web.UI.WebControls.Unit.Percentage(50);
-                   //Campo ID
-                   settings.Properties.ValueField = "IdNomina_TipoLiqui";
-                   settings.Properties.ValueType = typeof(int);
-                   settings.Properties.TextField = "DescripcionProcesoNomina";
-                   //Boton para seleccionar ningun registro
-                   settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Never;
-                   settings.Properties.NullText = "== Seleccione ==";
-                   settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-
-               }).BindList(ViewBag.lst_nomina_tipo).GetHtml()
-                @Html.ValidationMessageFor(q => q.IdNominaTipo, "", new { @class = "text-danger" })
-            </div>
-        </div>
-    </div>
-
-    <div class="row">
         <div class="col-md-12">
+
+
+            <div class="col-md-4">
+                <div class="form-group">
+                    <label for="IdCargo">Nómina*</label>
+                    @Html.DevExpress().ComboBoxFor(q => q.IdNomina, settings =>
+                   {
+                       settings.Name = "IdNomina";
+                       settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                       settings.Properties.DisplayFormatString = "[{0}] - {1}";
+                       settings.Properties.Columns.Add("IdNomina_Tipo", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(10);
+                       settings.Properties.Columns.Add("Descripcion", "Nómina").Width = System.Web.UI.WebControls.Unit.Percentage(50);
+                       //Campo ID
+                       settings.Properties.ValueField = "IdNomina_Tipo";
+                       settings.Properties.ValueType = typeof(int);
+                       settings.Properties.TextField = "Descripcion";
+                       //Boton para seleccionar ningun registro
+                       settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Never;
+                       settings.Properties.NullText = "== Seleccione ==";
+                       settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+
+                   }).BindList(ViewBag.lst_nomina).GetHtml()
+                    @Html.ValidationMessageFor(q => q.IdNomina, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="col-md-4">
+                <div class="form-group">
+                    <label for="IdCargo">Proceso*</label>
+                    @Html.DevExpress().ComboBoxFor(q => q.IdNominaTipo, settings =>
+                   {
+                       settings.Name = "IdNominaTipo";
+                       settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
+                       settings.Properties.DisplayFormatString = "[{0}] - {1}";
+                       settings.Properties.Columns.Add("IdNomina_TipoLiqui", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(10);
+                       settings.Properties.Columns.Add("DescripcionProcesoNomina", "Proceso").Width = System.Web.UI.WebControls.Unit.Percentage(50);
+                       //Campo ID
+                       settings.Properties.ValueField = "IdNomina_TipoLiqui";
+                       settings.Properties.ValueType = typeof(int);
+                       settings.Properties.TextField = "DescripcionProcesoNomina";
+                       //Boton para seleccionar ningun registro
+                       settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Never;
+                       settings.Properties.NullText = "== Seleccione ==";
+                       settings.Properties.DropDownStyle = DropDownStyle.DropDown;
+
+                   }).BindList(ViewBag.lst_nomina_tipo).GetHtml()
+                    @Html.ValidationMessageFor(q => q.IdNominaTipo, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+
             <div class="col-md-2">
                 <div class="form-group">
-                    <label for="Fecha">Fecha Novedad*</label>
+                    <label for="Fecha">Fecha pago*</label>
                     <div class="input-group date">
                         <div class="input-group-addon">
                             <i class="fa fa-calendar"></i>
@@ -117,29 +94,6 @@
                     }).GetHtml()
                         @Html.ValidationMessageFor(q => q.FechaCarga, "", new { @class = "text-danger" })
                     </div>
-                </div>
-            </div>
-            <div class="col-md-10">
-                <div class="form-group">
-                    <label for="IdCargo">Rubro*</label>
-                    @Html.DevExpress().ComboBoxFor(q => q.IdRubro, settings =>
-                   {
-                       settings.Name = "IdRubro";
-                       settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
-                       settings.Properties.DisplayFormatString = "[{0}] - {1}";
-                       settings.Properties.Columns.Add("ru_codRolGen", "ID").Width = System.Web.UI.WebControls.Unit.Percentage(10);
-                       settings.Properties.Columns.Add("ru_descripcion", "Rubro").Width = System.Web.UI.WebControls.Unit.Percentage(50);
-                       //Campo ID
-                       settings.Properties.ValueField = "IdRubro";
-                       settings.Properties.ValueType = typeof(string);
-                       settings.Properties.TextField = "ru_descripcion";
-                       //Boton para seleccionar ningun registro
-                       settings.Properties.ClearButton.DisplayMode = ClearButtonDisplayMode.Never;
-                       settings.Properties.NullText = "== Seleccione ==";
-                       settings.Properties.DropDownStyle = DropDownStyle.DropDown;
-
-                   }).BindList(ViewBag.lst_rubro).GetHtml()
-                    @Html.ValidationMessageFor(q => q.IdRubro, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
