--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ImportacionHoras/_GridViewPartial_importacion_horas_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ImportacionHoras/_GridViewPartial_importacion_horas_det.cshtml
@@ -45,10 +45,28 @@
 
 
         settings.Columns.Add("pe_cedulaRuc","Cédula").Width = Unit.Percentage(15);
-        settings.Columns.Add("pe_apellido","Empleado").Width = Unit.Percentage(50);
-        //settings.Columns.Add("Valor", "Valor").Width = Unit.Percentage(15);
+        settings.Columns.Add("pe_apellido","Empleado").Width = Unit.Percentage(40);
+        settings.Columns.Add("ru_descripcion", "Rubro").Width = Unit.Percentage(30);
+
+        settings.Columns.Add("NumHoras", "#Horas").Width = Unit.Percentage(10);
+        settings.Columns.Add("ValorHora", "Valor hora").Width = Unit.Percentage(10);
+
+        settings.Columns.Add(column =>
+        {
+            column.FieldName = "Valor";
+            column.Caption = "Total";
+            column.Width = Unit.Percentage(10);
+            column.EditorProperties().SpinEdit(sp =>
+            {
+                sp.MinValue = 0;
+                sp.MaxValue = 999999999;
+                sp.Width = Unit.Percentage(100);
+
+            });
+        });
+
         settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "Valor");
-        settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Count, "Secuencia");
+        settings.TotalSummary.Add(DevExpress.Data.SummaryItemType.Sum, "NumHoras");
 
 
 
