--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ImportacionHoras/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ImportacionHoras/Anular.cshtml
@@ -1,4 +1,4 @@
-﻿@model Core.Erp.Info.RRHH.ro_EmpleadoNovedadCargaMasiva_Info
+﻿@model Core.Erp.Info.RRHH.ro_HorasProfesores_Info
 @{
     ViewBag.Title = "Anular carga de horas";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
@@ -112,23 +112,6 @@
     </div>
 
 
-    <div class="row">
-        <div class="col-md-12">
-
-            <div class="col-md-12">
-
-                @Html.DevExpress().UploadControl(settings => {
-                settings.Name = "UploadControlFile";
-                settings.CallbackRouteValues = new { Controller = "ImportacionHoras", Action = "UploadControlUpload" };
-                settings.ShowUploadButton = true;
-                settings.ShowProgressPanel = true;
-                settings.NullText = "Click here to browse files...";
-                settings.ClientSideEvents.FileUploadComplete = "function(s, e) { GridViewPartial_importacion_novedades_det.PerformCallback({ path: e.callbackData}); }";
-                }).GetHtml()
-
-            </div>
-        </div>
-    </div>
 
 
     <div class="row">
@@ -136,7 +119,7 @@
             <div class="col-md-12">
                 <div class="form-group">
                     <label for="detalle">Detalle de la novedad</label>
-                    @Html.Action("GridViewPartial_importacion_novedades_det")
+                    @Html.Action("GridViewPartial_importacion_horas_det")
                     @Html.ValidationMessageFor(q => q.detalle, "", new { @class = "text-danger" })
                 </div>
             </div>
