--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/ContabilizarPeriodo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/ContabilizarPeriodo.cshtml
@@ -21,6 +21,9 @@
     @Html.HiddenFor(q => q.IdNomina_Tipo);
     @Html.HiddenFor(q => q.IdNomina_TipoLiqui);
     @Html.HiddenFor(q => q.IdPeriodo);
+    @Html.HiddenFor(q => q.IdRol);
+    @Html.HiddenFor(q => q.IdEmpresa);
+
 
     <div class="row">
         <div class="col-md-12">
