--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/ProcesarRol/Modificar.cshtml
@@ -9,8 +9,9 @@
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
 @using (Html.BeginForm("Modificar", "ProcesarRol", FormMethod.Post, new { @class = "form", @role = "form" }))
-{@Html.HiddenFor(q => q.IdEmpresa);
-@Html.HiddenFor(q => q.IdRol);
+{
+    @Html.HiddenFor(q => q.IdEmpresa);
+    @Html.HiddenFor(q => q.IdRol);
 
 <div class="row">
     <div class="col-md-12">
