--- a/ERP/Core.Erp.Web/Areas/Presupuesto/Views/RubroTipoPresupuesto/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Presupuesto/Views/RubroTipoPresupuesto/Nuevo.cshtml
@@ -1,6 +1,6 @@
-﻿@model Core.Erp.Info.Presupuesto.pre_rubro_Info
+﻿@model Core.Erp.Info.Presupuesto.pre_RubroTipo_Info
 @{
-    ViewBag.Title = "Nuevo rubro";
+    ViewBag.Title = "Nuevo tipo de rubro";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
         Response.Redirect("~/Account/Login");
@@ -8,7 +8,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
-@using (Html.BeginForm("Nuevo", "RubroPresupuesto", FormMethod.Post, new { @class = "form", @role = "form" }))
+@using (Html.BeginForm("Nuevo", "RubroTipoPresupuesto", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     if (ViewBag.mensaje != null)
     {
@@ -21,7 +21,7 @@
     @Html.HiddenFor(q => q.IdEmpresa);
     <div class="row">
         <div class="col-md-12">
-            <div class="col-md-6">
+            <div class="col-md-12">
                 <div class="form-group">
                     <label for="Descripcion">Descripción*</label>
                     @Html.TextBoxFor(q => q.Descripcion, new { @class = "form-control" })
@@ -32,25 +32,25 @@
     </div>
     <div class="row">
         <div class="col-md-12">
-            <div class="col-md-6">
+            <div class="col-md-3">
                 <div class="form-group">
-                    <label for="IdRubroTipo">Tipo de rubro*</label>
-                    @Html.DropDownListFor(q => q.IdRubroTipo, new SelectList(ViewBag.lst_RubroTipo, "IdRubroTipo", "Descripcion"), new { @class = "form-control", @id = "IdRubroTipo" })
-                    @Html.ValidationMessageFor(q => q.IdRubroTipo, "", new { @class = "text-danger" })
+                    <label for="IdCtaCble">Signo*</label>
+                    @Html.TextBoxFor(q => q.Signo, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(q => q.Signo, "", new { @class = "text-danger" })
                 </div>
             </div>
-            <div class="col-md-6">
+            <div class="col-md-3">
                 <div class="form-group">
-                    <label for="IdCtaCble">Cuenta contable de utilidad</label>
-                    @Html.Partial("_CmbCuentaContable", Model.IdCtaCble)
-                    @Html.ValidationMessageFor(q => q.IdCtaCble, "", new { @class = "text-danger" })
+                    <label for="IdCtaCble">Orden*</label>
+                    @Html.TextBoxFor(q => q.Orden, new { @class = "form-control" })
+                    @Html.ValidationMessageFor(q => q.Orden, "", new { @class = "text-danger" })
                 </div>
             </div>
         </div>
     </div>
     <div class="box-footer">
         <button type="submit" class="btn btn-primary">Guardar</button>
-        <a class="btn btn-default" href="@Url.Action("Index", "RubroPresupuesto", new { Area ="Presupuesto" }, null)">Cancelar</a>
+        <a class="btn btn-default" href="@Url.Action("Index", "RubroTipoPresupuesto", new { Area ="Presupuesto" }, null)">Cancelar</a>
     </div>
 
     @section Scripts {
